--- a/deriving-matching.tex
+++ b/deriving-matching.tex
@@ -359,14 +359,12 @@ In what follows, I show how I can derive the syncretisms for the forms in Table 
   ]
 \end{forest}
 
-I do not discuss the feature content of the morphemes \tit{je}, \tit{nie} and \tit{te}, but I call them XP.
+I do not discuss the feature content that distinguishes \tit{jego}, \tit{niego} and \tit{tego}, but I call them XP.
 Following the functional sequence I suggested in Chapter \ref{ch:deriving-onlyinternal}, all forms contain the feature \tsc{cl} for inanimate/neuter gender, \tsc{an} for animate/masculine gender and \tsc{ind} for singular number and case features up to the dative.
 
 The forms \tit{jego}, \tit{niego} and \tit{tego} are syncretic between the masculine and the neuter. This can be captured if the highest feature in the lexical tree is the feature that distinguishes masculine and neuter gender.
-This distinguishing feature is the feature \tsc{an} \citep{harley2002}, which is not the the highest feature in \ref{ex:pol-mu-dat-fseq}. Fortunately, different from \tit{jullie}, the forms are bimorphemic: they contain morphemes \tit{je}, \tit{nie} or \tit{te} and the morpheme \tit{mu}.
-Now the highest feature of one of the two morphemes needs to be the feature \tsc{an}.
-
-If the feature \tsc{an} can be either present or absent, the forms can easily spell both the structure with or without the feature \tsc{an}. Therefore, the lexical entry is as given in \ref{ex:pol-entry-nie/je/te}.
+This distinguishing feature is the feature \tsc{an} \citep{harley2002}, which is not the the highest feature in \ref{ex:pol-mu-dat-fseq}. Fortunately, different from \tit{jullie}, the forms are bimorphemic: they contain morphemes \tit{je}, \tit{nie} or \tit{te} and the morpheme \tit{mu}. The highest feature of one of the two morphemes needs to be the feature \tsc{an}.
+I show that the highest feature of the lexical entry for \tit{je}, \tit{nie} and \tit{te} is \tsc{an}, as shown in \ref{ex:pol-entry-nie/je/te}.
 
 \ex. \label{ex:pol-entry-nie/je/te}
 \begin{forest} boom
@@ -382,7 +380,9 @@ If the feature \tsc{an} can be either present or absent, the forms can easily sp
   {\draw (.east) node[right]{⇔ \tit{je/nie/te}}; }
 \end{forest}
 
-In \ref{ex:pol-spellout-nie/je/te-an}, I give the syntactic structure of a masculine form. The syntactic structure forms a constituent within the lexical tree in \ref{ex:pol-entry-nie/je/te}, and the structure can be spelled out as \tit{je/nie/te}.
+Since the feature \tsc{an} can be either present or absent, the forms can easily spell both the structure with or without the feature \tsc{an}.
+
+In \ref{ex:pol-spellout-nie/je/te-an}, I give the syntactic structure of a masculine form.
 
 \ex.\label{ex:pol-spellout-nie/je/te-an}
 \begin{forest} boom
@@ -403,7 +403,9 @@ In \ref{ex:pol-spellout-nie/je/te-an}, I give the syntactic structure of a mascu
   ]
 \end{forest}
 
-In \ref{ex:pol-spellout-nie/je/te-cl}, I give the syntactic structure of a masculine form. The syntactic structure forms a constituent within the lexical tree in \ref{ex:pol-entry-nie/je/te}, and the structure can be spelled out as \tit{je/nie/te}.
+The syntactic structure forms a constituent within the lexical tree in \ref{ex:pol-entry-nie/je/te}, and the structure can be spelled out as \tit{je/nie/te}.
+
+In \ref{ex:pol-spellout-nie/je/te-cl}, I give the syntactic structure of a masculine form.
 
 \ex.\label{ex:pol-spellout-nie/je/te-cl}
 \begin{forest} boom
@@ -421,7 +423,9 @@ In \ref{ex:pol-spellout-nie/je/te-cl}, I give the syntactic structure of a mascu
   ]
 \end{forest}
 
-What follows from this is that the lexical trees for the suffix \tit{mu} should contain all features in \ref{ex:pol-elh-dat} that are not spelled out by \tit{je/nie/te} so far. These are the feature \tsc{ind} and all case features up to the dative. I give the lexical entry for \tit{mu} in \ref{ex:pol-entry-mu}.
+The syntactic structure forms a constituent within the lexical tree in \ref{ex:pol-entry-nie/je/te}, and the structure can be spelled out as \tit{je/nie/te}.
+
+This means that the lexical tree for the suffix \tit{mu} should contain all features in \ref{ex:pol-elh-dat} that are not spelled out by \tit{je/nie/te} so far. These are the feature \tsc{ind} and all case features up to the dative. I give the lexical entry for \tit{mu} in \ref{ex:pol-entry-mu}.
 
 \ex. \label{ex:pol-entry-mu}
 \begin{forest} boom
@@ -458,7 +462,14 @@ The morpheme \tit{go} differs from \tit{mu} in that it lacks the feature \tit{f}
   {\draw (.east) node[right]{⇔ \tit{go}}; }
 \end{forest}
 
-This leaves the two morphemes \tit{k} and \tit{o}. First I discuss the \tit{o}. Consider the relative pronouns in Table \ref{tbl:pol-rps}.
+In sum, the morphemes \tit{go} and \tit{mu} spell out case features and a number feature.
+
+This leaves the two morphemes \tit{k} and \tit{o}. First I discuss the \tit{o}.
+This morpheme corresponds to what I called the phi-feature morpheme in Chapter \ref{ch:the-basic-idea} and the introduction to this chapter.
+I show that this morpheme corresponds to pronominal features and gender features.
+
+First I will show that the \tit{o} does not only appear in relative pronouns, but it also appears in other pronouns.
+Consider the relative pronouns in Table \ref{tbl:pol-rps}.
 
 \begin{table}[htbp]
   \center
@@ -504,7 +515,7 @@ The \tit{k} in \ref{ex:pol-gdzie} gets voiced into \tit{g} because it is followe
  where\\\label{ex:pol-gdzie}
  \flushfill{Polish, \pgcitealt{swan2002}{180,183-184}}
 
-Moreover, \tit{cz} is not a primary consonant but a derived one \pgcitep{swan2002}{23}. The consonants \tit{cz} and \tit{c} are derived from \tit{k}.
+Moreover, \tit{cz} is not a primary consonant in Polish but a derived one \pgcitep{swan2002}{23}. The consonants \tit{cz} and \tit{c} are derived from \tit{k}.
 
 I propose that the \tit{k} is present in the inanimate relative pronouns. They appear as a consequence of being combined with an \tit{j}. I show the proposed decomposition in Table \ref{tbl:pol-rp-underl}.
 
@@ -525,9 +536,10 @@ I propose that the \tit{k} is present in the inanimate relative pronouns. They a
   \label{tbl:pol-rp-underl}
 \end{table}
 
-Under this analysis, Polish only has the morphemes \tit{k}, \tit{o} and \tit{i} that can be observed in the animate plus an \tit{j} that is present throughout the whole paradigm in the inanimate.
-
-The next question is how the sequence \tit{k-j-i} becomes \tit{czy} in the instrumental, and the sequence \tit{k-j-o} becomes \tit{cze} in the genitive and dative, as shown in Table \ref{tbl:pol-rps-underl-real}.
+Under this analysis, Polish only has the morphemes \tit{k}, \tit{o} and \tit{i} that can be observed in the animate plus an \tit{j} that is present throughout the whole paradigm in the inanimate.\footnote{
+There seems to be a contradition here: the inanimate is featurally speaking less complex than the animate  \citep[cf.]{harley2002}, but morphologically the inanimate is more complex than the animate: it contains the additional morpheme \tit{i}. I return to this seemingly contradition later in this section.
+}
+This hypothesizes that Polish relative pronouns have the underlying forms shown in Table \ref{tbl:pol-rps-underl-real}.
 
 \begin{table}[htbp]
   \center
@@ -536,36 +548,64 @@ The next question is how the sequence \tit{k-j-i} becomes \tit{czy} in the instr
     \toprule
               & underlying  & surface    \\
     \cmidrule{2-3}
-    \tsc{nom} & k-j-o       &  c-o      \\
-    \tsc{acc} & k-j-o       &  c-o      \\
-    \tsc{gen} & k-j-o-go    &  cz-e-go  \\
-    \tsc{dat} & k-j-o-mu    &  cz-e-mu  \\
-    \tsc{ins} & k-j-i-m     &  cz-y-m   \\
+    \tsc{nom} & k-i-o       &  c-o      \\
+    \tsc{acc} & k-i-o       &  c-o      \\
+    \tsc{gen} & k-i-o-go    &  cz-e-go  \\
+    \tsc{dat} & k-i-o-mu    &  cz-e-mu  \\
+    \tsc{ins} & k-i-i-m     &  cz-y-m   \\
     \bottomrule
   \end{tabular}
   \label{tbl:pol-rps-underl-real}
 \end{table}
 
-To get from the underlying form to the surface form, three phonological processes are taking place, which are all independently observed within Polish. I give them in \ref{ex:pol-phon-j-k} to \ref{ex:pol-phon-c-vowel}.\footnote{
-In the nominative and accusative only the change in \ref{ex:pol-phon-j-k} is happening. I assume that the \tit{o} in the nominative and accusative resists the process in \ref{ex:pol-phon-j-vowel}. This is because the \tit{o} in the nominative and accusative is a `different' \tit{o} than all the other ones. This \tit{o} namely spells out different features than the \tit{o}.
-}\footnote{
-Under this analysis, \tit{czyj} `whose' is underlyingly \tit{k-j-i-j}.
-}
+The sequence \tit{k-i-i} becomes \tit{czy} in the instrumental, and the sequence \tit{k-i-o} becomes \tit{cze} in the genitive and dative.
+To get from the underlying form to the surface form, three phonological processes are taking place, which are all independently observed within Polish.
 
-\ex.\label{ex:pol-phon-j-k}
-\tit{j} + \tit{k} → \tit{c}
+
+\footnote{
+Under this analysis, \tit{czyj} `whose' is underlyingly \tit{k-i-i-j}.
+}
 
 \ex.\label{ex:pol-phon-j-vowel}
-\a. \tit{j} + \tit{o} → \tit{e}
-\b. \tit{j} + \tit{i} → \tit{y}
+\a. /o/ → /e/ / /i/\underline{\hspace{0.6cm}}\label{ex:pol-phon-j-o}
+\b. /i/ → /y/ / /i/\underline{\hspace{0.6cm}}\label{ex:pol-phon-j-i}
 
-\ex.\label{ex:pol-phon-c-vowel}
-\tit{c} before \tit{e/y} → \tit{cz}
+I continue with the change shown in \ref{ex:pol-phon-j-o}, in which the combination of /i/ and /i/ results in /y/.
 
-I start with the change of \tit{j} + \tit{k} to \tit{c}. Consider the paradigm for the singular of \tit{lampa} `light' and the singular of \tit{córka} `daugther' in Table \ref{tbl:pol-jk-to-c}. The stem and the suffixes are identical in both paradigms, except for in the dative.\footnote{
-Notice also the change from \tit{y} to \tit{i} in the genitive after the \tit{k}-stem \tit{córk}.
+\exg. walc-ik: walczyk\\
+waltz-\tsc{dim}\\
+(this is two in one) \flushfill{\pgcitealt{swan2002}{26}}
+
+I continue with the change shown in \ref{ex:pol-phon-j-o}, in which the combination of /o/ and /i/ results in /e/.
+
+\ex. moje-story
+
+
+\footnote{
+In the nominative and accusative only the change in \ref{ex:pol-phon-j-k} is happening. I assume that the \tit{o} in the nominative and accusative resists the process in \ref{ex:pol-phon-j-vowel}. This is because the \tit{o} in the nominative and accusative is a `different' \tit{o} than all the other ones. This \tit{o} namely spells out different features than the \tit{o}.
 }
-There, the stem of \tit{córka} does no longer end with a \tit{k}, but with a \tit{c}. Also, part of the suffix, namely the \tit{i} has disappeared. Analyzing \tit{córc-e} as \tit{córk-i-e} brings back regularity in the paradigm.
+
+\begin{table}[htbp]
+  \center
+  \caption{Polish inanimate relative pronouns (underlying + surface forms) \pgcitep{swan2002}{160}}
+  \begin{tabular}[b]{cc}
+    \toprule
+              & after first step  \\
+    \cmidrule{2-2}
+    \tsc{nom} & k-i-o           \\
+    \tsc{acc} & k-i-o             \\
+    \tsc{gen} & k-i-e-go      \\
+    \tsc{dat} & k-i-e-mu      \\
+    \tsc{ins} & k-i-y-m        \\
+    \bottomrule
+  \end{tabular}
+  \label{tbl:pol-rps-step-1}
+\end{table}
+
+\ex.\label{ex:pol-phon-j-k}
+\a. /k/ /i/ → /c/
+
+I start with the change shown in \ref{ex:pol-phon-j-k}, in which the combination of /k/ and /i/ results in /c/. Consider the paradigm for the singular of \tit{lampa} `light' and the singular of \tit{córka} `daugther' in Table \ref{tbl:pol-jk-to-c}.
 
 \begin{table}[htbp]
   \center
@@ -584,15 +624,33 @@ There, the stem of \tit{córka} does no longer end with a \tit{k}, but with a \t
 \label{tbl:pol-jk-to-c}
 \end{table}
 
-I continue with the change of \tit{j} + \tit{o} to \tit{e}.
+The stem and the suffixes are identical in both paradigms, except for in the dative.\footnote{
+Notice also the change from /i/ to /y/ in the genitive of \tit{lampa}. Possibly, the underlying form is here \tit{lamp-i-i}, and this is an instance of the change given in \ref{ex:pol-phon-j-i}.
+}
+There, the stem of \tit{córka} does no longer end with a \tit{k}, but with a \tit{c}. Also, part of the suffix, namely the \tit{i} has disappeared. Analyzing \tit{córc-e} as \tit{córk-i-e} brings back regularity in the paradigm.
 
-\ex. moje-story
+\begin{table}[htbp]
+  \center
+  \caption{Polish inanimate relative pronouns (underlying + surface forms) \pgcitep{swan2002}{160}}
+  \begin{tabular}[b]{cc}
+    \toprule
+              & after second step  \\
+    \cmidrule{2-2}
+    \tsc{nom} & c-o           \\
+    \tsc{acc} & c-o             \\
+    \tsc{gen} & c-e-go      \\
+    \tsc{dat} & c-e-mu      \\
+    \tsc{ins} & c-y-m        \\
+    \bottomrule
+  \end{tabular}
+  \label{tbl:pol-rps-step-2}
+\end{table}
 
-I continue with the change of \tit{j} + \tit{i} to \tit{y}.
+\ex.
+\b. /c/ → /cz/ / \underline{\hspace{0.6cm}}/e/
+\b. /c/ → /cz/ / \underline{\hspace{0.6cm}}/y/
 
-\exg. walc-ik: walczyk\\
-waltz-\tsc{dim}\\
-(this is two in one) \flushfill{\pgcitealt{swan2002}{26}}
+
 
 Finally, there is the change of \tit{c} before \tit{e/y} to \tit{cz}.
 
@@ -600,16 +658,14 @@ Finally, there is the change of \tit{c} before \tit{e/y} to \tit{cz}.
  father.\tsc{voc}\\
 \flushfill{\pgcitealt{swan2002}{26}}
 
+
 \exg. walc-ik: walczyk\\
  waltz-\tsc{dim}\\
  (this is two in one) \flushfill{\pgcitealt{swan2002}{26}}
 
 In sum, the \tit{o} in relative pronoun can appear as an \tit{e} when it is palatalized.
 
-
-The question is which features \tit{k} spells out and which \tit{o}. We know now that \tit{e} is underlyingly \tit{j} + \tit{o}. How do \tit{tego} and \tit{kogo} differ? They are demonstrative vs. \tsc{wh}-element. \tit{k} does question, \tit{t} does \tsc{dem}. I actually assume that \tit{k} does \tsc{dem} too, but I leave that out here. This means that the \tit{o} needs to do `other stuff'. It is the base, so what I have referring to as phi-features.\footnote{
-\tit{jego} is actually \tit{j} + \tit{ogo}
-}
+The conclusion I draw from this is that the morpheme \tit{o} is not specific to animate relative pronouns, but it also appears elsewhere, for instance in inanimate relative pronouns, demonstratives and the \tit{ni}- and \tit{je}-pronouns. What these elements all have in common is that they are pronouns. Therefore, I assume that the \tit{o} spells out pronominal features. In addition, it also spells out gender features.
 
 \ex. \label{ex:pol-entry-o}
 \begin{forest} boom
@@ -622,6 +678,12 @@ The question is which features \tit{k} spells out and which \tit{o}. We know now
   ]
   {\draw (.east) node[right]{⇔ \tit{o}}; }
 \end{forest}
+
+The question is which features \tit{k} spells out and which \tit{o}. We know now that \tit{e} is underlyingly \tit{j} + \tit{o}. How do \tit{tego} and \tit{kogo} differ? They are demonstrative vs. \tsc{wh}-element. \tit{k} does question, \tit{t} does \tsc{dem}. I actually assume that \tit{k} does \tsc{dem} too, but I leave that out here. This means that the \tit{o} needs to do `other stuff'. It is the base, so what I have referring to as phi-features.\footnote{
+\tit{jego} is actually \tit{j} + \tit{ogo}
+}
+
+
 
 I discuss the features that I assume the \tit{k} spells out one by one.
 
@@ -637,9 +699,9 @@ Actually, to be able to derive the inanimate relative pronoun, I assume that the
 \begin{forest} boom
   [\tsc{rel}P
       [\tsc{rel}]
-      [\tsc{wh}P, edge=->
+      [\tsc{wh}P
           [\tsc{wh}]
-          [\tsc{ind}P
+          [\tsc{ind}P, edge=->
               [\tsc{ind}]
               [\tsc{an}P
                   [\tsc{an}]
@@ -1005,54 +1067,79 @@ To summarize, I decomposed the relative pronoun into the three morphemes \tit{k}
 
 
 
-
-
-
-
-
-
-
 \section{The Polish extra light head}\label{sec:pol-elh}
 
-In Chapter \ref{ch:the-basic-idea}, I suggested that headless relatives are derived from light-headed relatives. The light head or the relative pronoun can be deleted when either of them forms a constituent within other. In Chapter \ref{ch:deriving-onlyinternal} I showed what the extra light head in Modern German looks like. I demonstrated
-
-In the introduction of this chapter, I suggested that in Polish features of the light head are spelled out in such a way that they form the constituency shown in \ref{ex:pol-lh-complex}.
+I have suggested that headless relatives are derived from light-headed relatives. The light head or the relative pronoun can be deleted when either of them forms a constituent within other. In the introduction of this chapter, I claimed that in Polish features of the light head are spelled out in such a way that they form the constituency shown in \ref{ex:pol-lh-complex}.
 
 \ex.\label{ex:pol-lh-complex}
 \begin{forest} boom
-  [\tsc{k}P,
-  tikz={
-  \node[label=below:\tit{go/mu},
-  draw,circle,
-  scale=0.75,
-  fit to=tree]{};
-  }
-      [\tsc{k}P
-          [ϕP
-              [\phantom{xxx}, roof, baseline]
-          ]
+  [\tsc{k}P, s sep = 15mm
+      [\tsc{an}P,
+      tikz={
+      \node[label=below:\tit{o},
+      draw,circle,
+      scale=0.75,
+      fit to=tree]{};
+      }
+          [\phantom{xxx}, roof, baseline]
+      ]
+      [\tsc{k}P,
+      tikz={
+      \node[label=below:\tit{go/mu},
+      draw,circle,
+      scale=0.85,
+      fit to=tree]{};
+      }
           [\tsc{k}]
+          [\tsc{ind}P
+              [\tsc{ind}]
+          ]
       ]
   ]
 \end{forest}
 
-% In Chapter \ref{ch:the-basic-idea}, I suggested that light heads consist of at least two features: ϕ and \tsc{k}. In this section, I specify the feature content of the light head in more detail.
-% Before I dive into the feature content of the light head, I first need to identify it, as it does not surface in headless relatives.
-% I consider two kinds of light-headed relatives as the source of the headless relative.
-% First, the deletion of the light head is optional, and the light-headed relative is derived from an existing light-headed relative.
-% Second, the deletion of the light head is obligatory, and the light-headed relative is derived from a light-headed relative that does not surfaces in Modern German.
-% I consider the first option first, and I give two reasons against it.
-% However, to identify the exact input structure, I take the light head from the existing light-headed relative as a point of departure, and I modify it in such a way that it is appropriate as a light head for a headless relative.
-% I end up claiming that the phi- and case-feature portmanteau of the relative pronoun is the light head in headless relatives, shown below in \ref{ex:mg-lh}.
+\ref{ex:pol-lh-complex} shows that light heads consist of at least two features: ϕ and \tsc{k}, as I suggested in Chapter \ref{ch:the-basic-idea}. In this section, I specify the feature content of the light head in more detail.
+Just like I suggested in Chapter \ref{ch:deriving-onlyinternal}, I end up claiming that the phi- and case-feature morphemes of the relative pronoun are the light head in headless relatives. I show the complete structure that I work towards in this section in \ref{ex:pol-elh}.
 
-%worked out version in polish
+\ex.\label{ex:pol-elh}
+\begin{adjustbox}{max width=0.9\textwidth}
+\begin{forest} boom
+  [\tsc{k}P, s sep=40mm
+      [\tsc{an}P,
+      tikz={
+      \node[label=below:\tit{o},
+      draw,circle,
+      scale=0.95,
+      fit to=tree]{};
+      }
+          [\tsc{an}]
+          [\tsc{cl}P
+              [\tsc{cl}]
+              [\tsc{ref}]
+          ]
+      ]
+      [\tsc{k}P,
+      tikz={
+      \node[label=below:\tit{go/mu},
+      draw,circle,
+      scale=0.9,
+      fit to=tree]{};
+      }
+          [\tsc{k}]
+          [\tsc{ind}P
+              [\tsc{ind}]
+          ]
+      ]
+  ]
+\end{forest}
+\end{adjustbox}
 
-
-In this section I have argued that the extra light head in Polish is consists of the \tit{o} and a suffix. This means that I propose the light-headed relative that headless are derived from is of the type I show in \ref{ex:pol-elh-rp}
-
-\exg. Jan lubi [ogo] \tbf{kogo} \tbf{-kolkwiek} \tbf{Maria} \tbf{lubi}.\\
-Jan like.\tsc{3sg}\scsub{[acc]} \tsc{elh}.\tsc{acc}.\tsc{an} \tsc{rp}.\tsc{acc}.\tsc{an} ever Maria like.\tsc{3sg}\scsub{[acc]}\\
-`Jan likes whoever Maria likes.' \flushfill{Polish, adapted from \citealt{citko2013} after \pgcitealt{himmelreich2017}{17}}\label{ex:pol-elh-rp}
+%
+% In this section I argue that the extra light head in Polish is consists of the \tit{o} and a suffix. This means that I propose the light-headed relative that headless are derived from is of the type I show in \ref{ex:pol-elh-rp}
+%
+% \exg. Jan lubi [ogo] \tbf{kogo} \tbf{-kolkwiek} \tbf{Maria} \tbf{lubi}.\\
+% Jan like.\tsc{3sg}\scsub{[acc]} \tsc{elh}.\tsc{acc}.\tsc{an} \tsc{rp}.\tsc{acc}.\tsc{an} ever Maria like.\tsc{3sg}\scsub{[acc]}\\
+% `Jan likes whoever Maria likes.' \flushfill{Polish, adapted from \citealt{citko2013} after \pgcitealt{himmelreich2017}{17}}\label{ex:pol-elh-rp}
 
 For Modern German, I considered two kinds of light-headed relatives as the source of the headless relative.
 First, the light-headed relative is derived from an existing light-headed relative, and the deletion of the light head is optional. Second, the light-headed relative is derived from a light-headed relative that does not surfaces in Modern German, and the deletion of the light head is obligatory.
