--- a/the-basic-idea.tex
+++ b/the-basic-idea.tex
@@ -206,7 +206,7 @@ This change in constituency is a direct consequence the lexical entries that are
 Exactly this type of difference is what is going to lead to the different grammaticality patterns in headless relatives. Languages contain different lexical entries which spell out features of the light head and the relative pronoun.
 The different lexical entries lead to differences in constituency. The different constituents lead to differences in whether or the light head and the relative pronoun can be deleted. Lastly, whether or not the light head and the relative pronoun can be deleted lead to different grammaticality patterns. I summarize this in \ref{ex:summary-differences-languages}.
 
-\ex.\label{ex:summary-differences-languages} lexical entries $\rightarrow$ structure $\rightarrow$ containment $\rightarrow$ deletion $\rightarrow$ surface pronoun
+\ex.\label{ex:summary-differences-languages} lexical entries → structure → containment → deletion → surface pronoun
 
 In sum, I assume that headless relative clauses are derived from light-headed relatives. Light-headed relatives contain a light head and relative pronoun. In a headless relative either the light head or the relative pronoun is deleted.
 The necessary requirement for deletion is that the deleted element (either the light head or relative pronoun) forms a constituent within the other element.
