--- a/deriving-matching.tex
+++ b/deriving-matching.tex
@@ -111,74 +111,68 @@ In Chapter \ref{ch:typology}, I showed that Polish is a language of the matching
 \begin{figure}[htbp]
   \center
   \begin{adjustbox}{max width=\textwidth}
-  \begin{tabular}[b]{ccc}
-      \toprule
-      light head & & relative pronoun \\
-      \cmidrule(lr){1-1} \cmidrule(lr){3-3}
-      \begin{forest} boom
-        [\tsc{k}P, s sep = 15mm
-            [\tsc{an}P,
+    \begin{tabular}[b]{ccc}
+        \toprule
+        light head & & relative pronoun \\
+        \cmidrule(lr){1-1} \cmidrule(lr){3-3}
+        \begin{forest} boom
+        [\tsc{k}P, s sep = 20 mm
+            [ϕP,
             tikz={
-            \node[
-            draw,circle,
-            scale=0.75,
-            fit to=tree]{};
-            }
-                [\phantom{xxx}, roof, baseline]
-            ]
-            [\tsc{k}P,
-            tikz={
-            \node[
+            \node[label=below:\tit{o},
             draw,circle,
             scale=0.85,
             fit to=tree]{};
             }
-                [\tsc{k}]
-                [\tsc{ind}P
-                    [\tsc{ind}]
-                ]
-            ]
-        ]
-      \end{forest}
-      & \phantom{x} &
-      \begin{forest} boom
-        [\tsc{rel}P
-            [\tsc{rel}P,
-            tikz={
-            \node[
-            draw,circle,
-            scale=0.75,
-            fit to=tree]{};
-            }
                 [\phantom{xxx}, roof]
             ]
-            [\tsc{k}P, s sep = 15mm
-                [\tsc{an}P,
+            [\tsc{k}P,
+            tikz={
+            \node[label=below:\tit{go/mu},
+            draw,circle,
+            scale=0.85,
+            fit to=tree]{};
+            }
+                [\tsc{k}, baseline]
+            ]
+        ]
+        \end{forest}
+        & \phantom{x} &
+      \begin{forest} boom
+        [\tsc{rel}P, s sep = 15 mm
+            [\tsc{rel}P,
+            tikz={
+            \node[label=below:\tit{k},
+            draw,circle,
+            scale=0.85,
+            fit to=tree]{};
+            }
+                [\phantom{xxx}, roof, baseline]
+            ]
+            [\tsc{k}P, s sep = 20 mm
+                [ϕP,
                 tikz={
-                \node[
-                draw,circle,
-                scale=0.75,
-                fit to=tree]{};
-                }
-                    [\phantom{xxx}, roof, baseline]
-                ]
-                [\tsc{k}P,
-                tikz={
-                \node[
+                \node[label=below:\tit{o},
                 draw,circle,
                 scale=0.85,
                 fit to=tree]{};
                 }
-                    [\tsc{k}]
-                    [\tsc{ind}P
-                        [\tsc{ind}]
-                    ]
+                    [\phantom{xxx}, roof]
+                ]
+                [\tsc{k}P,
+                tikz={
+                \node[label=below:\tit{go/mu},
+                draw,circle,
+                scale=0.85,
+                fit to=tree]{};
+                }
+                    [\tsc{k}, baseline]
                 ]
             ]
         ]
       \end{forest}\\
-      \bottomrule
-  \end{tabular}
+        \bottomrule
+    \end{tabular}
   \end{adjustbox}
    \caption {\tsc{lh} and \tsc{rp} in Polish}
   \label{fig:rel-lh-pol}
@@ -1729,3 +1723,81 @@ The extra light head also does not contain all constituents or features that the
 Therefore, the extra light head cannot be deleted, and the relative pronoun cannot be deleted either.
 
 \section{Summary}
+
+Polish is an example of a matching type of language. This means that headless relatives are grammatical in the language only when the internal and external case match.
+
+I derive this from the morphology of light heads and relative pronouns in Polish. The light head corresponds to two lexical entries, which respectively spells out phi- and case-features. The relative pronoun corresponds in addition to that to another lexical entry, one that amongst other spells out a relative feature. The Polish light head and relative pronoun are schematically shown in Figure \ref{fig:rel-lh-pol-sum}.
+
+\begin{figure}[htbp]
+  \center
+  \begin{adjustbox}{max width=\textwidth}
+    \begin{tabular}[b]{ccc}
+        \toprule
+        light head & & relative pronoun \\
+        \cmidrule(lr){1-1} \cmidrule(lr){3-3}
+        \begin{forest} boom
+        [\tsc{k}P, s sep = 20 mm
+            [ϕP,
+            tikz={
+            \node[label=below:\tit{o},
+            draw,circle,
+            scale=0.85,
+            fit to=tree]{};
+            }
+                [\phantom{xxx}, roof]
+            ]
+            [\tsc{k}P,
+            tikz={
+            \node[label=below:\tit{go/mu},
+            draw,circle,
+            scale=0.85,
+            fit to=tree]{};
+            }
+                [\tsc{k}, baseline]
+            ]
+        ]
+        \end{forest}
+        & \phantom{x} &
+      \begin{forest} boom
+        [\tsc{rel}P, s sep = 15 mm
+            [\tsc{rel}P,
+            tikz={
+            \node[label=below:\tit{k},
+            draw,circle,
+            scale=0.85,
+            fit to=tree]{};
+            }
+                [\phantom{xxx}, roof, baseline]
+            ]
+            [\tsc{k}P, s sep = 20 mm
+                [ϕP,
+                tikz={
+                \node[label=below:\tit{o},
+                draw,circle,
+                scale=0.85,
+                fit to=tree]{};
+                }
+                    [\phantom{xxx}, roof]
+                ]
+                [\tsc{k}P,
+                tikz={
+                \node[label=below:\tit{go/mu},
+                draw,circle,
+                scale=0.85,
+                fit to=tree]{};
+                }
+                    [\tsc{k}, baseline]
+                ]
+            ]
+        ]
+      \end{forest}\\
+        \bottomrule
+    \end{tabular}
+  \end{adjustbox}
+   \caption {\tsc{lh} and \tsc{rp} in Polish (repeated)}
+  \label{fig:rel-lh-pol-sum}
+\end{figure}
+
+A crucial characteristic of matching languages such as Polish is that they have separate morphemes for phi- and case-features. Therefore, the light head is contained as a constituent within the relative pronoun when the internal and the external case match. As the light head can be recovered from within the relative pronoun, it can be deleted. There is a grammatical headless relative that surfaces with the relative pronoun which bears the internal case.
+
+When the internal and external case differ, neither the light head nor the relative pronoun is contained as a constituent within the other element. None of the elements can be deleted, and there is no grammatical headless relative possible.
